[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Box.gd" type="Script" id=1]
[ext_resource path="res://tempBox.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 15.1593, 71.5841 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 72.0168, 10 )

[node name="Box" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 32, 32 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Vertical" type="Area2D" parent="." index="2"]

position = Vector2( 32, 32 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vertical" index="0"]

shape = SubResource( 2 )

[node name="Horizontal" type="Area2D" parent="." index="3"]

editor/display_folded = true
position = Vector2( 32, 32 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Horizontal" index="0"]

shape = SubResource( 3 )

[connection signal="body_entered" from="Vertical" to="." method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="Vertical" to="." method="_on_Area2D_body_exited"]

[connection signal="body_entered" from="Horizontal" to="." method="_on_Horizontal_body_entered"]


